tests/machine/x/cobol/list_assign.error
cobc: exit status 1
/workspace/mochi/tests/machine/x/cobol/list_assign.cob:12: error: 'NUMS-E2' is not defined

