tests/machine/x/cobol/list_assign.cob
*> Generated by Mochi compiler v0.10.26 on 2025-07-16T15:32:16Z
>>SOURCE FORMAT FREE
       IDENTIFICATION DIVISION.
       PROGRAM-ID. LIST-ASSIGN.
       DATA DIVISION.
       WORKING-STORAGE SECTION.
       01 NUMS.
           05 E1 PIC 9 VALUE 1.
           05 E2 PIC 9 VALUE 2.
       01 TMP PIC 9(9) VALUE 0.
       PROCEDURE DIVISION.
       COMPUTE NUMS-E2 = 3
       COMPUTE TMP = NUMS-E2
       DISPLAY TMP
       STOP RUN.
